@@ -1,10 +1,14 @@
-package models;
+package com.bteam.common.models;
 
-import Exceptions.*;
-import entities.CharacterEntity;
+import com.bteam.common.exceptions.DestinationAlreadyOccupiedException;
+import com.bteam.common.exceptions.DestinationInvalidException;
+import com.bteam.common.exceptions.FullStartTilesException;
+import com.bteam.common.exceptions.NotAStartPositionException;
+import com.bteam.common.entities.CharacterEntity;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Service class for the initial placement
@@ -12,16 +16,19 @@ import java.util.List;
  * The class is responsible for the placement of the given Characters
  * into the {@link GridService }.
  *
- * @author albano lukas
+ * @author Albano, Lukas
  * @version 1.0
  */
 public class GridPlacementService {
+
+    private GridPlacementService() {
+    }
 
     /**
      * Places characters in the allowed starting rows at the bottom of the grid.
      *
      * @param gridService GridService that manages the grid
-     * @param characters  list of CharacterEntity objects to place in the grid
+     * @param characters list of CharacterEntity objects to place in the grid
      * @param startTilesRows array with the exact row numbers allowed for placement
      *
      * @throws DestinationInvalidException if a specified position is out of bounds
@@ -36,7 +43,7 @@ public class GridPlacementService {
         List<Integer> sortedRows = Arrays.stream(startTilesRows)
                 .boxed()
                 .sorted((a, b) -> Integer.compare(b, a))
-                .toList();
+                .collect(Collectors.toList());
         int gridCols = gridService.getGridModel().getCols();
 
 
